== News

- 0.3 -
  * MySQL collation comparison support
  * Handle NULL DEFAULT NULL PRIMARY KEY properly
  * fix standalone jar generation
  * download scala compiler and library from Ivy (no need in scala.home any more)
  * ...

- 0.2 -
  * ...