@@ -5,6 +5,7 @@
   * Handle NULL DEFAULT NULL PRIMARY KEY properly
   * fix standalone jar generation
   * download scala compiler and library from Ivy (no need in scala.home any more)
+  * ALTER TABLE statements on single table are joined now
   * ...
 
 - 0.2 -
